@@ -2,6 +2,7 @@
   -added labels below the medallions/stones
   -fixed two Forest Temple locations
   -added Link the Goron can be stopped with bow
+  -added child trade sequence
 1.0.0.6:
   -fixed Shadow Temple having 1 free item too much
   -changed free item counters to go upwards so the dungeon gets cleared if you have them all
